# Ctrl-F-ilm

./: .gitignore  README.md
.github/workflows/: ci.yml
infra/: ecr-push.sh  ecs-task-definition.json
monitoring/: prometheus.yml
monitoring/grafana/: dashboard.json
serving/: Dockerfile  pyproject.toml
serving/app/: main.py
serving/tests/: test_api.py
