[project]
name = "ctrl-film-serving"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
dev = [
    "httpx2",
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
